--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -236,3 +236,78 @@ year = {2021}
    year = {2004},
 }
 
+@article{MVLearn,
+  title={mvlearn: Multiview Machine Learning in Python},
+  author={Perry, Ronan and Mischler, Gavin and Guo, Richard and Lee, Theodore and Chang, Alexander and Koul, Arman and Franz, Cameron and Richard, Hugo and Carmichael, Iain and Ablin, Pierre and Gramfort, Alexandre and Vogelstein, Joshua T.},
+  journal={Journal of Machine Learning Research},
+  volume={22},
+  number={109},
+  pages={1-7},
+  year={2021}
+}
+
+@Article{YaleDataset,
+  author =  "Georghiades, A.S. and Belhumeur, P.N. and Kriegman, D.J.",
+  title =   "From Few to Many: Illumination Cone Models for Face Recognition under
+               Variable Lighting and Pose",
+  journal = "IEEE Trans. Pattern Anal. Mach. Intelligence",
+  year =  2001,
+  volume = 23,
+  number = 6,
+  pages= "643-660"}
+
+@inproceedings{CELEBA,
+  title = {Deep Learning Face Attributes in the Wild},
+  author = {Liu, Ziwei and Luo, Ping and Wang, Xiaogang and Tang, Xiaoou},
+  booktitle = {Proceedings of International Conference on Computer Vision (ICCV)},
+  month = {December},
+  year = {2015} 
+}
+
+@TechReport{LFW,
+  author =       {Gary B. Huang and Manu Ramesh and Tamara Berg and 
+                  Erik Learned-Miller},
+  title =        {Labeled Faces in the Wild: A Database for Studying 
+                  Face Recognition in Unconstrained Environments},
+  institution =  {University of Massachusetts, Amherst},
+  year =         2007,
+  number =       {07-49},
+  month =        {October}}
+
+@article{MLFW,
+  title={MLFW: A Database for Face Recognition on Masked Faces}, 
+  author={Wang, Chengrui and Fang, Han and Zhong, Yaoyao and Deng, Weihong},
+  journal={arXiv preprint arXiv:2109.05804},
+  year={2021}
+}
+
+@article{JULE,
+   abstract = {In this paper, we propose a recurrent framework for Joint Unsupervised
+LEarning (JULE) of deep representations and image clusters. In our framework,
+successive operations in a clustering algorithm are expressed as steps in a
+recurrent process, stacked on top of representations output by a Convolutional
+Neural Network (CNN). During training, image clusters and representations are
+updated jointly: image clustering is conducted in the forward pass, while
+representation learning in the backward pass. Our key idea behind this
+framework is that good representations are beneficial to image clustering and
+clustering results provide supervisory signals to representation learning. By
+integrating two processes into a single model with a unified weighted triplet
+loss and optimizing it end-to-end, we can obtain not only more powerful
+representations, but also more precise image clusters. Extensive experiments
+show that our method outperforms the state-of-the-art on image clustering
+across a variety of image datasets. Moreover, the learned representations
+generalize well when transferred to other tasks.},
+   author = {Jianwei Yang and Devi Parikh and Dhruv Batra},
+   doi = {10.48550/arxiv.1604.03628},
+   isbn = {9781467388504},
+   issn = {10636919},
+   journal = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+   month = {4},
+   pages = {5147-5156},
+   publisher = {IEEE Computer Society},
+   title = {Joint Unsupervised Learning of Deep Representations and Image Clusters},
+   volume = {2016-December},
+   url = {https://arxiv.org/abs/1604.03628v3},
+   year = {2016},
+}
+
