--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -94,8 +94,9 @@ José Antonio Cantoral Ceballos}
             no controlado. \cite{FaceDetection2001}
 
         \item \textbf{Alineación del rostro}: Como segundo paso en este proceso, se alinea
-            el rostro de acuerdo a coordenadas canónicas. \cite{Wang2021} Se han presentado
-            varias propuestas, de las cuales las \textit{CNN} han obtenido buenos resultados.
+            el rostro de acuerdo a coordenadas canónicas.\cite{Wang2021} Se han presentado
+            varias propuestas que han sido evaluadas en previas investigaciones
+            \cite{Zafeiriou2015}, de las cuales las \textit{CNN} han obtenido buenos resultados.
             Para el propósito de este proyecto, se utilizará la propuesta de Zhang \cite{MTCNN}.
             La cual utiliza una \textit{CNN} para la detección y la alineación de los rostros
             en la misma secuencia.
@@ -124,17 +125,16 @@ José Antonio Cantoral Ceballos}
     \section{Trabajos Relacionados}
 
     \subsection{Combinación de Redes Neuronales Convolucionales Previamente Entrenadas}
-    En previas investigaciones diferentes modelos de \textit{deep clustering algorithm}
-    han demostrado un buen desempeño para pequeñas imágenes. Por otro lado, para
-    obtener resultados exitosos en la agrupación de imágenes de mayor complejidad
+    Para obtener resultados exitosos en la agrupación de imágenes de mayor complejidad
     (cómo imágenes de objetos con estructuras complejas) es necesario la utilización
-    de \textit{CNN}s previamente entrenadas para la extracción de características muy específicas.
+    de \textit{CNN}s previamente entrenadas para la extracción de características muy específicas,
+    junto con algoritmos de \textit{deep clustering}. \cite{DCCS}\cite{JULE}\cite{Agarap2020}
     
-    Existen una variedad de estos modelos, los cuales tienen un mismo objetivo pero aportan una
-    perspectiva diferente gracias a variaciones dentro de las arquitecturas, funciones de
-    activación y/ó base de datos utilizada para el entrenamiento. Para casos específicos un modelo
-    puede tener mejor desempeño que otro en la obtención de características definitivas, pero en
-    otro contexto puede tener un desempeño inferior. Guérin y coautores en la investigación
+    Existen una variedad de estos modelos \textit{CNN}, los cuales tienen un mismo objetivo pero
+    aportan una perspectiva diferente gracias a variaciones dentro de las arquitecturas, funciones
+    de activación y/ó base de datos utilizada para el entrenamiento. Para casos específicos un
+    modelo puede tener mejor desempeño que otro en la obtención de características definitivas,
+    pero en otro contexto puede tener un desempeño inferior. Guérin y coautores en la investigación
     \textit{'Combining pretrained CNN feature extractors to enhance clustering of complex natural images'}
     utilizan diferentes modelos \textit{CNN} para obtener resultados más constantes en la tarea de
     agrupación de imágenes complejas. Esto es gracias a que no se puede saber el modelo óptimo para
@@ -146,30 +146,30 @@ José Antonio Cantoral Ceballos}
     \subsection{Modelo IE-CNN}
     An-Pint Song comprobó en su investigación \textit{'Similar Face Recognition Using the IE-CNN
     Model'} la importancia de tomar múltiples perspectivas sobre una misma imágen al realizar el
-    reconocimiento de rostros. Este artículo menciona un fenómeno dentro de la investigación para
-    el desarrollo de modelos de reconocimiento: siempre se utiliza la parte interna del rostro
-    para el entrenamiento de los modelos. Lo cual no se apega completamente a cómo los humanos
-    procesamos un nuevo rostro. Cuando es difícil determinar la comparación entre individuos,
-    incrementamos nuestro enfoque en características específicas de la cara para discernir entre los
-    dos rostros diferentes. \cite{Young1987} \cite{Andrews2010} Por lo que Song propone un modelo
-    de \textit{CNN} que utiliza diferentes perspectivas enfocadas en partes estratégicas del rostro
-    para obtener una representación mejorada. La cual obtuvo una mejora en los resultados de
-    alrededor del 5\%. \cite{IECNN}
+    reconocimiento de rostros.\cite{IECNN} Este artículo menciona un fenómeno dentro de la
+    investigación para el desarrollo de modelos de reconocimiento: siempre se utiliza la parte
+    interna del rostro para el entrenamiento de los modelos. Lo cual no se apega completamente
+    a cómo los humanos procesamos un nuevo rostro. Cuando es difícil determinar la comparación
+    entre individuos, incrementamos nuestro enfoque en características específicas de la cara
+    para discernir entre los dos rostros diferentes.\cite{Young1987}\cite{Andrews2010}
+    Por lo que Song propone un modelo de \textit{CNN} que utiliza diferentes perspectivas
+    enfocadas en partes estratégicas del rostro para obtener una representación mejorada.
+    La cual obtuvo una mejora en los resultados de alrededor del 5\%.\cite{IECNN}
 
     \section{Planteamiento del Problema}
     % Diferentes situaciones afectan la fiabilidad de los modelos cnn
-    Reiterando la problemática con la utilización de \textit{CNN} previamente mencionada
+    Reiterando la problemática previamente mencionada sobre la utilización de \textit{CNN},
     la extracción de las características únicas de una cara para el reconocimiento facial
     es un reto no trivial por múltiples factores. Uno de estos es la posición del rostro,
     ya que es posible ocultar atributos clave que conllevan a una recolección incompleta
     de la información necesaria. Así mismo, el uso de artefactos como lentes o cubrebocas
     llevan a obstrucciones en dicha recolección. Por otro lado, las expresiones faciales
-    pueden alterar la representación numérica, incluso cuando es la misma cara. Finalmente,
-    los últimos factores que afectan son relacionados al ambiente, cómo la iluminación
+    pueden alterar la representación numérica, incluso cuando es el rostro del mismo individuo.
+    Finalmente, los últimos factores que afectan son relacionados al ambiente, cómo la iluminación
     y la calidad de la cámara. \cite{Bodini2019}
 
     El diseño y entrenamiento de modelos lo suficientemente complejos que puedan desempeñarse
-    correctamente en cualquier tipo de contexto requiere de una gran cantidad de recursos de
+    correctamente en cualquier tipo de contexto requieren de una gran cantidad de recursos de
     \textit{hardware} y de una base de datos que incluya varias representaciones por cada uno
     de estos contextos. Incluso corporaciones gigantes han tenido problemas para resolver esta
     problemática en todos los casos posibles. Podemos tomar como ejemplo la situación en la que
@@ -198,8 +198,8 @@ José Antonio Cantoral Ceballos}
 
     Para el desarrollo de esta investigación, se utilizó la librería de Python
     \textit{Keras-VGGFace}, la cual contiene modelos previamente entrenados con las arquitecturas
-    \textit{VGG16}, \textit{RESNET50}, \textit{SENET50}. Aunque hay más modelos públicos, se
-    decidió realizar las pruebas con estos tres modelos.
+    \textit{VGG16}, \textit{RESNET50}, \textit{SENET50}. Aunque hay más modelos públicos
+    \cite{Inceptionv3}\cite{Facenet}, se decidió realizar las pruebas con estos tres modelos.
 
     \subsection{Concatenación de Diferentes Representaciones (CC)}
     El acercamiento de concatenación consiste en, cómo su nombre lo dice, concatenar las
@@ -207,8 +207,9 @@ José Antonio Cantoral Ceballos}
     por cada modelo que proporciona una perspectiva.
     
     Ya que se espera que entre más modelos utilizados la complejidad de tiempo crezca
-    exponencialmente, se utilizará el algoritmo de reducción de dimensiones
-    \textit{Principal Component Analysis (PCA)} para reducir el tiempo de procesamiento.
+    exponencialmente, se evaluará el desempeño del algoritmo de reducción de dimensiones
+    \textit{Principal Component Analysis (PCA)} para reducir el tiempo de procesamiento sin
+    que exista un impacto en la precisión del modelo.
 
     \begin{figure}[ht]
         \centering
@@ -224,14 +225,14 @@ José Antonio Cantoral Ceballos}
     haya una gran variedad de estos algoritmos, muchos de estos encuentran soluciones apropiadas
     pero no óptimas. Estos convergen a un óptimo local y no a un óptimo global, aunque existe
     la pequeña posibilidad de que algunos sí llegan a este último (cómo por ejemplo: el algoritmo
-    de \textit{k-means}. Ya que llegar a una solución óptima global es un poco aleatoria por la
+    de \textit{k-means}). Ya que llegar a una solución óptima global es un poco aleatoria por la
     dependencia de la inicialización y distribución de las diferentes entradas, escoger un
     algoritmo de agrupación apto para la información presentada puede ser una tarea difícil. Para
     solucionar este problema, diferentes investigadores introdujeron el concepto de métodos de
-    conjuntos para agrupamientos (\textit{Cluster Ensembles - CE} en inglés), ó también conocidos
-    como métodos de consenso de agrupamiento (\textit{Consensus Clustering} en inglés). Los
-    algoritmos de \textit{CE} combinan los diferentes resultados de agrupamiento para generar un
-    agrupamiento final, sin necesitar acceso a los algoritmos o registros de información.
+    conjuntos para agrupamientos (\textit{Cluster Ensembles - CE} por sus siglas en inglés),
+    ó también conocidos como métodos de consenso de agrupamiento (\textit{Consensus Clustering}).
+    Los algoritmos de \textit{CE} combinan los diferentes resultados de agrupamiento para generar
+    un agrupamiento final, sin necesitar acceso a los algoritmos o registros de información.
     \cite{Golalipour2021}
 
     \begin{figure}[ht]
@@ -262,8 +263,8 @@ José Antonio Cantoral Ceballos}
     contener posibles conecciones entre ellas, las cuales pueden ser explotadas para desenmascarar
     características únicas de cada objeto. La idea principal de utilizar \textit{MVC} es
     particionar objetos de acuerdo a diferente criteria relacionada con estas conecciones de sus
-    diferentes vistas, ajustando algoritmos comunes y conocidos (cómo k-means) para un enfoque de
-    mayor complejidad. \cite{Yang2018}
+    diferentes vistas, ajustando algoritmos comunes y conocidos (cómo \textit{k-means}) para un
+    enfoque de mayor complejidad. \cite{Yang2018}
 
     Las pruebas realizadas en esta investigación utilizarán la librería de Python \textit{MVLearn}.
     \cite{MVlearn} La cual contiene mayor variedad de algoritmos de múltiples vistas para utilizar.
@@ -274,41 +275,51 @@ José Antonio Cantoral Ceballos}
 
     \subsection{Medición y Datasets}
     % NMI
-    Para evaluar el desempeño de este modelo de combinación se dividirá en dos etapas dicha
-    evaluación:
-    \begin{enumerate}
-        \item Se dará la tarea de agrupar las imágenes de un número conocido y variable de
-            personas. La composición de estos grupos será evaluada con la métrica
-            \textit{Normalized Mutual Info (NMI)} \cite{NMI}. Es importante esta puntuación porque
-            al evaluar la facilidad para el algoritmo de determinar los grupos de acuerdo a las
-            diferentes representaciones significa que estas se encuentran separadas a comparación
-            de representaciones de otros rostros y también se encuentran cercanas a las
-            representaciones de un mismo individuo por lo que se cumple nuestra hipótesis de una
-            representación más completa de las características únicas del rostro.
+%    Para evaluar el desempeño de este modelo de combinación se dividirá en dos etapas dicha
+%    evaluación:
+%    \begin{enumerate}
+%        \item Se dará la tarea de agrupar las imágenes de un número conocido y variable de
+%            personas. La composición de estos grupos será evaluada con la métrica
+%            \textit{Normalized Mutual Info (NMI)} \cite{NMI}. Es importante esta puntuación porque
+%            al evaluar la facilidad para el algoritmo de determinar los grupos de acuerdo a las
+%            diferentes representaciones significa que estas se encuentran separadas de las
+%            representaciones de rostros de otros individuos y también se encuentran cercanas a las
+%            representaciones de un mismo individuo por lo que se cumple nuestra hipótesis de una
+%            representación más completa de las características únicas del rostro.
 %        \item De un mapeo previamente realizado de un número conocido de personas, se agregarán
 %            más imágenes de personas incluidas en dicho agrupamiento y de otras no incluidas. Por
 %            cada imágen se evaluará si predijo correctamente la persona a la que pertenece o si
 %            es una persona nueva. Denotando el porcentaje de casos de falsos positivos,
 %            ya que es una métrica importante en los sistemas de seguridad biométricos.
-        \item La diferencia de tiempo para realizar el agrupamiento entre cada uno de los
-            acercamientos.
-    \end{enumerate}
+%        \item La diferencia de tiempo para realizar el agrupamiento entre cada uno de los
+%            acercamientos.
+%    \end{enumerate}
+    Para evaluar el desempeño de este modelo de combinación, se dará la tarea de se dará la
+    tarea de agrupar las imágenes de un número conocido y variable de personas. La composición
+    de estos grupos será evaluada con la métrica \textit{Normalized Mutual Info (NMI)}
+    \cite{NMI}. Es importante esta puntuación porque al evaluar la facilidad del algoritmo para
+    determinar los grupos de acuerdo a las diferentes representaciones significa que estas se
+    encuentran separadas de las representaciones de rostros de otros individuos y también se
+    encuentran cercanas a las representaciones de un mismo individuo; por lo que se cumple
+    nuestra hipótesis de una representación más completa de las características únicas del
+    rostro.
 
     % Datasets
     Es importante que estas evaluaciones sean hechas con la mayor cantidad posible de imágenes que
-    representen los diferentes contextos que afectan a este tipo de autenticación biométrico. Por
+    representen los diferentes contextos que afectan a este tipo de autenticación biométrica. Por
     lo que se decidió utilizar cuatro diferentes \textit{datasets} públicas:
     \begin{itemize}
         \item \textbf{Yale Face Dataset}: Esta base de datos pública es una de las más comunes y
-            utilizadas para investigación y validación de modelos de detección y reconocimiento de
-            datos. Esta consiste de un total de 165 imágenes de 15 individuos. Este dataset se
+            utilizadas para investigación, validación de modelos de detección y reconocimiento de
+            rostros. Esta consiste de un total de 165 imágenes de 15 individuos con diferentes
+            ángulos de iluminación, posición de rostro y utilización de lentes. Este dataset se
             utilizó para realizar pruebas sencillas durante el desarrollo del modelo propuesto.
 %        \item \textbf{The Extended Yale Face Dataset B}\cite{YaleDataset}: Este \textit{dataset}
 %            consiste en 16,128 imágenes en escala de gris de 28 individuos. Cada uno tiene 9
 %            posiciones de rostro, y 64 situaciones diferentes de iluminación. Este dataset se
 %            utilizará para experimentar los cambios de iluminación y posición de rostro.
         \item \textbf{CelebA Dataset}\cite{CELEBA}: Consiste en 10,177 individuos con un total de
-            202,599 imágenes de rostros. Se recomienda este dataset porque tiene al menos 2 o más
+            202,599 imágenes de rostros. Se recomienda este dataset porque tiene al menos dos o más
             imágenes por cada una de las personas; lo cual es excelente para probar que las
             representaciones de un mismo individuo no tengan mucha distancia entre ellas.
         \item \textbf{Labeled Faces in the Wild (LFW)}\cite{LFW}: Al igual que la base de datos de
@@ -316,20 +327,22 @@ José Antonio Cantoral Ceballos}
             con 13,233 imágenes de 5,749 individuos. La desventaja de este dataset es que sólo
             1,680 individuos tienen dos o más imágenes.
         \item \textbf{Masked Labeled Faces in the Wild (MLFW)}\cite{MLFW}: Consiste en modificar el
-            \textit{dataset LFW}, agregando una imagen de un cubrebocas para cada imágen. Por lo
+            \textit{dataset LFW}, agregando una imagen de un cubrebocas para cada rostro. Por lo
             que se buscará aprovechar este dataset para probar la consistencia del modelo frente
-            a situaciones que cubran la parte inferior del rostro.
+            a situaciones inesperadas, cómo lo es una limitación visual para la parte inferior del
+            rostro.
     \end{itemize}
 
     \section{Resultados}
     Al analizar los grandes tamaños de cada \textit{dataset}, se observó que no es viable realizar
-    análisis sobre todas las imágenes de cada uno. Esto es porque buscamos comprobar nuestra
-    hipótesis sobre que la utilización de diferentes modelos \textit{CNN} es capaz de construir una
-    representación más completa de una imágen. En otras palabras, buscamos que las representaciones
-    de cada rostros sean sencillas de identificar y agrupar. No buscamos determinar si es posible
-    agrupar un grupo de imágenes tan grande. Para solucionar el problema que ocasiona utilizar
+    análisis sobre todas las imágenes de cada uno en un mismo análisis por limitaciones de memoria.
+    En esta investigación buscamos comprobar nuestra hipótesis sobre la utilización de diferentes
+    modelos \textit{CNN} es capaz de construir una representación más completa de un individuo.
+    En otras palabras, buscamos que las representaciones de cada rostros sean sencillas de
+    identificar y agrupar; no buscamos determinar si es posible agrupar una base de datos de
+    imágenes tan extenso. Para solucionar este problema que ocasiona utilizar
     tanta memoria, optamos por realizar múltiples pruebas de al menos 50 individuos por
-    \textit{dataset} (con la excepción del \textit{Yale dataset} porque cuenta con 15 individuos.
+    \textit{dataset} (con la excepción del \textit{Yale dataset} porque cuenta con 15 individuos).
 
     Una vez específicado el tamaño de las pruebas, organizamos la experimentación de este proyecto
     en dos pasos, cada uno con un objetivo diferente:
@@ -343,7 +356,8 @@ José Antonio Cantoral Ceballos}
     \begin{itemize}
         \item \textbf{\textit{k-means}}: Se escogió este algoritmo por la idea de que si se
             encuentra una representación general de un rostro (el \textit{centroide}) es más
-            sencillo encontrar representación cercanas a esta representación.
+            sencillo encontrar representaciones cercanas a esta representación general de un
+            individuo.
         \item \textbf{\textit{agglomerative}}: Como segunda opción se experimentó con
             \textit{agglomerative clustering} por ser un algoritmo de agrupación jerárquica. Por lo
             que se tendrá un resultado determinístico.
@@ -362,8 +376,8 @@ José Antonio Cantoral Ceballos}
         \caption{Análisis de resultados por algoritmo de agrupamiento.}
     \end{figure}
 
-    La figura 3 nos ayuda a visualizar la variación de los resultados preliminar
-    es que se obtuvieron para resolver el primer objetivo. Con esta información podemos hacer
+    La figura 3 nos ayuda a visualizar la variación de los resultados preliminares que se
+    obtuvieron para resolver el primer objetivo. Con esta información podemos hacer
     las siguientes reflexiones:
 
     \begin{enumerate}
@@ -374,10 +388,10 @@ José Antonio Cantoral Ceballos}
             encontrar una menor cantidad de grupos antes de converger.
         \item Existe poca diferencia entre los resultados de los algoritmos \textit{k-means} y
             \textit{agglomerative}. Por lo que se decidió optar por utilizar el algoritmo de
-            \textit{k-means}, ya que este almacena un los \textit{centroides} que se utilizarían
+            \textit{k-means}, ya que este almacena los \textit{centroides} que se utilizarían
             en el modelo para determinar si una nueva imagen es parte del grupo de representaciones
             del mismo rostro.
-        \item Finalmente utilizar un reductor de dimensionalidad, \textit{PCA} en este caso, no
+        \item Finalmente utilizar un reductor de dimensionalidad, \textit{PCA}, no
             altera la precisión al agrupar las imágenes. Por lo tanto, se utilizará este reductor
             de dimensiones para las siguientes pruebas que contienen un número mucho mayor de
             imágenes.
@@ -409,15 +423,15 @@ José Antonio Cantoral Ceballos}
     \begin{enumerate}
         \item \textbf{Dataset CelebA}: A primera vista los resultados que se obtuvieron en todos
             los tipos de acercamiento dejaron mucho que desear. Aunque en la
-            figura 6, en la cual
-            se hace una comparación de los resultados a cuando se utiliza la arquitectura 
-            \textit{VGG16}, podemos ver que se mantiene el nivel de precisión de este modelo. Al
-            tener un puntaje promedio de 0.82 de forma individual, el modelo \textit{VGG16}
-            proporciona las características más definitivas de los rostros en este dataset. En
-            contraste, las otras dos arquitecturas - \textit{RESNET} y \textit{SENET} - no
-            tienen una perspectiva lo suficientemente clara para determinar con precisión los
-            grupos. Al utilizar el algoritmo de concatenación, las características de la mejor
-            red neuronal son compartidas para que se obtenga un mejor resultado.
+            figura 6, en la cual se hace una comparación de los resultados cuando se utiliza
+            la arquitectura \textit{VGG16} en combinación con otras, podemos ver que se mantiene
+            el nivel de precisión de este modelo. Al tener un puntaje promedio de 0.82 de forma
+            individual, el modelo \textit{VGG16} proporciona las características más definitivas de
+            los rostros en este dataset. En contraste, las otras dos arquitecturas -
+            \textit{RESNET} y \textit{SENET} - no tienen una perspectiva lo suficientemente clara
+            para determinar con precisión los grupos. Al utilizar el algoritmo de concatenación,
+            las características de la mejor red neuronal son compartidas para que se obtenga un
+            mejor resultado.
             \begin{figure}[ht]
                 \centering
                 \includegraphics[width=8cm]{./figs/celeba_vgg.png}
@@ -457,12 +471,12 @@ José Antonio Cantoral Ceballos}
     arbitrarias del programador al realizar el diseño de esta, por lo que hay una gran variación
     de resultados (incluso con las mismas arquitecturas) en diferentes casos de prueba. En este
     artículo se propone la idea de aprovechar las diferentes perspectivas que tienen cada uno de
-    los \textit{modelos} para tener una perspectiva más completa.
+    los modelos \textit{CNN} para tener una perspectiva más completa.
 
     Con los resultados y sus reflexiones previamente mencionadas, podemos concluir que en caso de
     necesitar un modelo que tenga la flexibilidad para la detección de rostros en una gran
     variedad de contextos es posible utilizar una combinación de redes neuronales previamente
-    entrenadas. Aunque existe la posibilidad de que se seleccione una \textit{CNN} con entrenada
+    entrenadas. Aunque existe la posibilidad de que se seleccione una \textit{CNN} entrenada
     con un dataset parecido al contexto que se somete y que puede incluso tener el mejor resultado
     a comparación de otras redes, también existe la posibilidad de elegir una red neuronal que
     no es apta para la situación que se presenta. Por lo que al sacrificar tiempo para dedicarlo a
@@ -479,7 +493,7 @@ José Antonio Cantoral Ceballos}
     Así mismo, cabe mencionar que se experimentó con una pequeña cantidad de algoritmos de
     agrupamiento; de los cuales existen una mayor variedad (incluso cuando se trata de
     agrupamiento de múltiples vistas). En un artículo relacionado, Guerín obtuvo resultados
-    muy altos en \textit{datasets} selectas con el algoritmo de \textit{deep clustering} llamado
+    muy altos en \textit{datasets} selectos con el algoritmo de \textit{deep clustering} llamado
     \textit{Joint Unsupervised Learning of Deep Representations and Image Clusters} \cite{JULE};
     con el cual se puede expandir esta experimentación.
 
